Migration of UI to Quasar and integration with company house
