# api/server/components/companyHouse/companyHouseRouter.ts
@@ -1,0 +1,3 @@
+import express from 'express';
+import controller from './companyHouseControllers';
+export default express.Router().post('/', controller.search);
