# api/server/routes.ts
@@ -3,6 +3,7 @@ import utilsRouter from './common/utils';
 import entityRouter from './components/entity';
 import userRouter from './components/user';
 import authRouter from './components/auth';
+import companyHouseRouter from './components/companyHouse';
 
 export default function routes(app: Application): void {
   // TODO: To be removed
@@ -10,4 +11,5 @@ export default function routes(app: Application): void {
   app.use('/v1/auth', authRouter);
   app.use('/v1/user', userRouter);
   app.use('/v1/entity', entityRouter);
+  app.use('/v1/companyHouse', companyHouseRouter);
 }
